Store the locale config in ResourcesImpl instead of ResourcesManager
Fixes: 404553215
Test: automated
Flag: EXEMPT bugfix
Change-Id: Idb7bfb89775484aba7d45210aea6f93a84b23420

--- a/core/tests/coretests/res/values-fa/strings.xml
+++ b/core/tests/coretests/res/values-fa/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="dummy_string">رشتهٔ الکی</string>
+
+    <!-- Used in ResourcesLocaleTest. -->
+    <string name="multilocale_test_res_2">FA2</string>
 </resources>
